0025815: Visualization - emit error message in case of texture loading fail

Added error message in case when texture cannot be loaded from file.